--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,5 +1,6 @@
 ANSIBLE_DIR="../ansible"
 BOXES = %w(command1 command2)
+ACCEPTANCE_BOXES = %w(command2)
 
 Vagrant.configure("2") do |config|
   BOXES.each_with_index do |box, idx|
@@ -14,16 +15,18 @@ Vagrant.configure("2") do |config|
       v.vm.network "forwarded_port", guest:  80, host: 9080 + idx, host_ip: '127.0.0.1'
       v.vm.network "forwarded_port", guest: 443, host: 9443 + idx, host_ip: '127.0.0.1'
 
-      v.vm.provision "ansible_local" do |ansible|
-        ansible.playbook = File.join(ANSIBLE_DIR, "playbook.yml")
-        ansible.verbose = to_boolean(ENV.fetch('ANSIBLE_VERBOSE', 'false'))
+      unless ACCEPTANCE_BOXES.include?(box)
+        v.vm.provision "ansible_local" do |ansible|
+          ansible.playbook = File.join(ANSIBLE_DIR, "build-playbook.yml")
+          ansible.verbose = to_boolean(ENV.fetch('ANSIBLE_VERBOSE', 'false'))
 
-        ansible.extra_vars = {
-          'github_token' => ENV.fetch('GH_TOKEN', ''),
-        }
+          ansible.extra_vars = {
+            'github_token' => ENV.fetch('GH_TOKEN', ''),
+          }
+        end
+
+        v.vm.synced_folder ANSIBLE_DIR, "/ansible"
       end
-
-      v.vm.synced_folder ANSIBLE_DIR, "/ansible"
     end
   end
 end
