--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
-/disk.img
-/filesystems
-/images
-/persistent
 /MIA-6-4-0-DEV.tgz
 /MIA-6-4-0-DEV.vmdk
 /tmp
 .vagrant
-/ansible/roles/phoenix-modules/files/tmp/*.tgz
+/ansible/roles/*/files/tmp/*.tgz
 /ansible/roles/snmp/files/raw_mibs/
-/ansible/roles/package-daemons/files/tmp/*.tgz
