--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -1,6 +1,16 @@
 ANSIBLE_DIR="../ansible"
-BOXES = %w(command1 command2)
-ACCEPTANCE_BOXES = %w(command2)
+BOXES = [
+  {
+    name: "command1",
+    box: "bento/ubuntu-22.04",
+    acceptance: false,
+  },
+  {
+    name: "command2",
+    box: "ubuntu/focal64",
+    acceptance: false,
+  }
+]
 
 Vagrant.configure("2") do |config|
   BOXES.each_with_index do |box, idx|
@@ -9,13 +19,13 @@ Vagrant.configure("2") do |config|
       v.memory = 2048
     end
 
-    config.vm.define box, primary: true do |v|
-      v.vm.box = 'ubuntu/focal64'
-      v.vm.hostname = box
+    config.vm.define box[:name], primary: idx == 0 do |v|
+      v.vm.box = box[:box]
+      v.vm.hostname = box[:name]
       v.vm.network "forwarded_port", guest:  80, host: 9080 + idx, host_ip: '127.0.0.1'
       v.vm.network "forwarded_port", guest: 443, host: 9443 + idx, host_ip: '127.0.0.1'
 
-      unless ACCEPTANCE_BOXES.include?(box)
+      unless box[:acceptance]
         v.vm.provision "ansible_local" do |ansible|
           ansible.playbook = File.join(ANSIBLE_DIR, "build-playbook.yml")
           ansible.verbose = to_boolean(ENV.fetch('ANSIBLE_VERBOSE', 'false'))
