Ansible playbook installs python3-boto3
Previously, we required the user to install this manually.

--- a/ansible/build-playbook.yml
+++ b/ansible/build-playbook.yml
@@ -6,6 +6,8 @@
   become_method: sudo
   roles:
     - role: base
+    - role: misc_packages
+      tags: misc_packages
     # - role: certificates
     #   tags: certificates
     - role: webserver
