Hide confusing non-error
This isn't ever an error, we just branch on whether `emma` is already
downloaded.  Now it doesn't output as red potentially confusing people.

--- a/ansible/roles/emma/tasks/main.yml
+++ b/ansible/roles/emma/tasks/main.yml
@@ -2,7 +2,7 @@
   ansible.builtin.command:
     cmd: ls -d {{ emma_path }}
   register: emma_dir
-  ignore_errors: yes
+  failed_when: False
 
 - name: Install emma
   when: emma_dir.stdout == ""
