vagrant provision works with S3 download tasks

--- a/ansible/roles/package-mia/tasks/main.yml
+++ b/ansible/roles/package-mia/tasks/main.yml
@@ -4,6 +4,8 @@
     object: /concertim/packages/appliances/mia.tgz
     dest: "{{ role_path }}/files/tmp/mia.tgz"
     mode: get
+    aws_access_key: "{{ aws_access_key_id }}"
+    aws_secret_key: "{{ aws_secret_access_key }}"
 
 - name: Make destination directory
   ansible.builtin.file:
