--- a/ansible/roles/phoenix-modules/tasks/main.yml
+++ b/ansible/roles/phoenix-modules/tasks/main.yml
@@ -4,6 +4,8 @@
     object: /concertim/packages/modules/{{ item }}.tgz
     dest: "{{ role_path }}/files/tmp/{{ item }}.tgz"
     mode: get
+    aws_access_key: "{{ aws_access_key_id }}"
+    aws_secret_key: "{{ aws_secret_access_key }}"
   loop: "{{ modules }}"
 
 - name: Make destination directory
