Add jammy box using official ubuntu vagrantbox
bento/ubuntu-22.04 uses `eth0` naming for network interfaces.  This is
different than will be used for real machines. But perhaps correct for
VMs?

Not sure what our delivery mechanism for MIA looks like, but let's have
both an `eth0` and an `enp0s3` version of jammy to develop/test against.

--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -9,6 +9,11 @@ BOXES = [
     name: "command2",
     box: "ubuntu/focal64",
     acceptance: false,
+  },
+  {
+    name: "command3",
+    box: "ubuntu/jammy64",
+    acceptance: false,
   }
 ]
 
@@ -35,6 +40,9 @@ Vagrant.configure("2") do |config|
             'aws_access_key_id' => ENV.fetch('AWS_ACCESS_KEY_ID', ''),
             'aws_secret_access_key' => ENV.fetch('AWS_SECRET_ACCESS_KEY', ''),
           }
+
+          # ansible.start_at_task = ""
+          # ansible.tags = ""
         end
 
         v.vm.synced_folder ANSIBLE_DIR, "/ansible"
