Install some dev/debug utilities

--- a/ansible/roles/misc_packages/tasks/main.yml
+++ b/ansible/roles/misc_packages/tasks/main.yml
@@ -2,3 +2,9 @@
   ansible.builtin.apt:
     name: python3-boto3
     state: latest
+
+- name: Install useful development utilities
+  ansible.builtin.apt:
+    name:
+      - net-tools
+    state: latest
