Use dev version of requirejs and amcharts
FSR the non-dev version of requirejs isn't correctly installed.  I'm not
currently sure what the issue is, but this is a quick "fix" to get
things moving.

--- a/ansible/build-playbook.yml
+++ b/ansible/build-playbook.yml
@@ -44,6 +44,8 @@
       tags: emma
     - role: package-mia
       tags: [package-mia, mia]
+    - role: appliance-dev
+      tags: appliance-dev
     - role: finalization
       tags: finalization
 
