--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -42,7 +42,8 @@ Vagrant.configure("2") do |config|
   MACHINES.each_with_index do |box, idx|
     config.vm.provider "virtualbox" do |v|
       # v.memory = 8192
-      v.memory = 2048
+      v.memory = 4096
+      # v.memory = 2048
     end
 
     config.vm.define box[:name], primary: idx == 0 do |v|
@@ -50,6 +51,7 @@ Vagrant.configure("2") do |config|
       v.vm.hostname = box[:name]
       v.vm.network "forwarded_port", guest:  80, host: 9080 + idx + 1, host_ip: '127.0.0.1'
       v.vm.network "forwarded_port", guest: 443, host: 9443 + idx + 1, host_ip: '127.0.0.1'
+      v.vm.provision "swap", type: "shell", path: "scripts/create-swap.sh"
 
       unless to_boolean(ENV['ACCEPTANCE'])
         v.vm.synced_folder ANSIBLE_DIR, "/ansible"
