--- a/ansible/roles/phoenix-mongrel/tasks/main.yml
+++ b/ansible/roles/phoenix-mongrel/tasks/main.yml
@@ -17,7 +17,7 @@
     group: root
     mode: "744"
 
-- name: Make pid directories
+- name: Make config directory
   ansible.builtin.file:
     path: "{{ item.path }}"
     owner: "{{ item.owner }}"
@@ -25,10 +25,6 @@
     mode: "{{ item.mode }}"
     state: directory
   loop:
-    - path: "{{ mongrel_pid_dir }}"
-      owner: "{{ mongrel_user }}"
-      group: root
-      mode: u=rwx,g=rx,o=rx
     - path: "{{ mongrel_conf_dir }}"
       owner: root
       group: root
