--- a/ansible/roles/configure-vanilla/tasks/main.yml
+++ b/ansible/roles/configure-vanilla/tasks/main.yml
@@ -91,14 +91,35 @@
     - ftsw-users.rb
     - setup.sh
 
+# Failures with the FTSW automation script can be complicated to debug.  The
+# following blocks provide more readable error messages should the script fail.
 - name: Run FTSW automation script
-  vars:
-    rails_env: production
-  ansible.builtin.shell:
-    cmd: |
-      PATH=/opt/ruby-1.8/bin:$PATH
-      sudo -u www-data --preserve-env=PATH /bin/bash -c 'RAILS_ENV={{ rails_env }} script/runner /usr/local/sbin/ftsw-automation.rb'
-    chdir: /data/private/share/rails/sas
+  block:
+    - name: Run FTSW automation script
+      vars:
+        rails_env: production
+      ansible.builtin.shell:
+        cmd: |
+          PATH=/opt/ruby-1.8/bin:$PATH
+          sudo -u www-data --preserve-env=PATH /bin/bash -c 'RAILS_ENV={{ rails_env }} script/runner /usr/local/sbin/ftsw-automation.rb'
+        chdir: /data/private/share/rails/sas
+      register:
+        ftsw_automation
+      # The failure will become fatal after the stderr and stdout have been printed.
+      ignore_errors: True
+
+    - name: FTSW automation stderr
+      ansible.builtin.debug:
+        var: ftsw_automation.stderr_lines
+      failed_when: ftsw_automation.rc != 0
+      ignore_errors: True
+      when: ftsw_automation.rc != 0
+
+    - name: FTSW automation stdout
+      ansible.builtin.debug:
+        var: ftsw_automation.stdout_lines
+      failed_when: ftsw_automation.rc != 0
+      when: ftsw_automation.rc != 0
 
 - name: Configure users
   vars:
