Fix FTSW following after fixing emma's romance
Previously, changes were made to the FTSW SetupManager to work around
issues with emma not publishing its models.  In particular `User` and
`Cluster`.  Now that emma publishes those models, a different set of
changes is required.

* The two `Cluster` models (hacor and ivy) not longer update the VPN and
  PXE config files.  SetupManager no longer attempts to update them.
* SetupManager has better logging for unexpected errors.
* SetupManager will now fail if emma hasn't published its models.

--- a/ansible/roles/emma/tasks/main.yml
+++ b/ansible/roles/emma/tasks/main.yml
@@ -64,6 +64,7 @@
         - update-locked-gems.patch
         - disable-help-links.patch
         - disable-legacy-events-generator.patch
+        - disable-vpn-and-pxe-config-updating.patch
 
     - name: Bundle install gems
       ansible.builtin.shell: |
