Run post restoration scripts as part of FTSW
Amongst other things, this installs the missing rack and chassis
templates, allowing racks and devices to be added.

--- a/ansible/roles/phoenix-modules/tasks/main.yml
+++ b/ansible/roles/phoenix-modules/tasks/main.yml
@@ -142,7 +142,9 @@
   loop_control:
     loop_var: module
 
+- name: Install various appliance scripts
+  include_tasks: install_scripts.yml
+
 # - name: Install cron jobs
 # - name: Install logrotation
-# - name: Install various appliance scripts
 # - name: Add www-data to adm group
