Enable PHP apache mod
This is needed for the hacor hardware setup.  Which is currently needed
for creating an appliance in hacor.  Which may or may not be required to
get the appliance to recognize the fake ganglia data.

--- a/ansible/roles/webserver/tasks/main.yml
+++ b/ansible/roles/webserver/tasks/main.yml
@@ -1,6 +1,8 @@
-- name: Ensure apache is at the latest version
+- name: Install apache and dependencies
   ansible.builtin.apt:
-    name: apache2
+    name:
+      - apache2
+      - libapache2-mod-php
     state: latest
 
 - name: Write the apache config files
@@ -23,10 +25,8 @@
     - socache_dbm
     - ssl
     - lbmethod_byrequests
-    # We have a PHP app somewhere that, IIRC, displays a boot progress bar.
-    # IIRC, we can worry about these later.
-    # - cgi
-    # - php5
+    - cgi
+    - php8.1
 
 - name: Enable conf
   ansible.builtin.command:
