--- a/ansible/build-playbook.yml
+++ b/ansible/build-playbook.yml
@@ -44,6 +44,8 @@
       tags: emma
     - role: package-mia
       tags: [package-mia, mia]
+    - role: personality
+      tags: personality
     - role: release-info
       tags: release-info
     - role: appliance-dev
