--- a/ansible/roles/finalization/tasks/main.yml
+++ b/ansible/roles/finalization/tasks/main.yml
@@ -33,4 +33,4 @@
 # We may need some kind of sleep before hand.
 - name: Restart mia again because of the reasons
   ansible.builtin.command:
-    cmd: mongrel_cluster cluster::restart -C /etc/mongrel_cluster/mia.yml --clean
+    cmd: mongrel_rails cluster::restart -C /etc/mongrel_cluster/mia.yml --clean
