Fix gmetad configuration

--- a/ansible/roles/ganglia/tasks/main.yml
+++ b/ansible/roles/ganglia/tasks/main.yml
@@ -18,7 +18,7 @@
 - name: Install gmetad configuration
   ansible.builtin.copy:
     src: gmetad.conf
-    dest: /etc/
+    dest: /etc/ganglia/
     owner: root
     group: nogroup
     mode: u=rw,g=r,o=r
