--- a/ansible/roles/ganglia/files/gmetad.conf
+++ b/ansible/roles/ganglia/files/gmetad.conf
@@ -1,9 +1,45 @@
-# server performance tuning parameter to deal with high load
-server_threads 12
-# user name
+# This is an example of a Ganglia Meta Daemon configuration file
+#                http://ganglia.sourceforge.net/
+#
+#
+# Setting the debug_level above zero will make gmetad output
+# debugging information and stay in the foreground
+# default: 0
+# debug_level 10
+#
+# List of machines this gmetad will share XML with
+# default: There is no default value
+trusted_hosts 127.0.0.1 
+#
+# If you don't want gmetad to setuid then set this to off
+# default: on
+# setuid off
+#
+# User gmetad will setuid to (defaults to "nobody") 
+# default: "nobody"
 setuid_username "ganglia"
+#
 # allow gmetad sources - GRID xml tags
 scalable off
+#
+# The port gmetad will answer requests for XML
+# default: 8651
+# xml_port 8651
+#
+# The number of threads answering XML requests
+# default: 2
+# server_threads 4
+#
+# Where gmetad stores its round-robin databases
+# default: "/var/lib/ganglia/rrds"
+# rrd_rootdir "/some/other/place"
+#
+# The data_source tag must immediately be followed by a unique
+# string which identifies the source then a list of machines
+# which service the data source in the format ip:port, or name:port.  
+# If a # port is not specified then 8649 (the default gmond port) is
+# assumed.
+# default: There is no default value
 # standard ganglia stream
 data_source "gmond" localhost
 # out-of-band IPMI and SNMP polling daemon
@@ -21,4 +57,4 @@ data_source "ct-capacity-daemon_local" localhost:8659
 # vm location daemon
 data_source "ct-hypervisor-daemon_local" localhost:8654
 
-data_source mia_uml 10.254.1.2
+data_source fake_gmond localhost:8677
