--- a/ansible/roles/ruby/tasks/main.yml
+++ b/ansible/roles/ruby/tasks/main.yml
@@ -1,4 +1,4 @@
-- name: Extract tar file
+- name: Extract tar file (deprecated)
   ansible.builtin.unarchive:
     src: "{{ item }}.tgz"
     dest: /
@@ -7,6 +7,13 @@
     - openssl-1.0.2u
     - openssl-1.0.2l
     - ruby-1.8.7-p374
+
+- name: Extract tar file
+  ansible.builtin.unarchive:
+    src: "tmp/{{ item }}.tgz"
+    dest: /
+    creates: /opt/{{ item }}
+  loop:
     - ruby-1.9.2-p0
 
 - name: Link Rubies
