Add gdb macros for ruby and script to run gdb
Very useful for debugging number crunchers.

Macros originally downloaded from
https://github.com/michaelklishin/gdb-macros-for-ruby

--- a/ansible/roles/build-number-crunchers/tasks/main.yml
+++ b/ansible/roles/build-number-crunchers/tasks/main.yml
@@ -3,3 +3,5 @@
 # - name: Compile
 # - name: Create deb package
 # - name: Upload deb package
+# - name: Copy gdb macros
+# - name: Copy gdb running script
