--- a/ansible/roles/personality/defaults/main.yml
+++ b/ansible/roles/personality/defaults/main.yml
@@ -1,4 +1,13 @@
-emma_personalty_folder: "/data/private/share/emma/core/config/personalities"
+emma_core_dir: "/data/private/share/emma/core"
+emma_personalty_folder: "{{ emma_core_dir }}/config/personalities"
 etc_personalty_folder: "/data/private/share/etc/concurrent-thinking/appliance"
 branding_name: "ct"
 branding_yaml_path: "/data/private/share/etc/concurrent-thinking/branding.yml"
+logo_dirs:
+  - "{{ emma_core_dir }}/config/personalities/ct/images/"
+  - "{{ emma_core_dir }}/public/personalities/ct/images/"
+logo_files:
+  - logo-left.png
+  - logo-right.png
+  - lower-login.png
+  - upper-login.png
