Remove in-band metrics from fake ganglia data

--- a/ansible/roles/package-fake-gmond/tasks/main.yml
+++ b/ansible/roles/package-fake-gmond/tasks/main.yml
@@ -38,6 +38,7 @@
     strip: 1
   loop:
     - fix-ruby-path.patch
+    - remove-in-band-metrics.patch
 
 # XXX Move to fake gmond git repo when available.
 - name: Install start_fake_gmond script
