--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -6,11 +6,13 @@ MACHINES = [
   },
   {
     name: "command2",
-    box: "bento/ubuntu-22.04",
+    # box: "bento/ubuntu-22.04",
+    box: "ubuntu/jammy64",
   },
   {
     name: "command3",
-    box: "ubuntu/focal64",
+    # box: "ubuntu/focal64",
+    box: "ubuntu/jammy64",
   }
 ]
 PLAYBOOKS = [
@@ -42,7 +44,8 @@ Vagrant.configure("2") do |config|
   MACHINES.each_with_index do |box, idx|
     config.vm.provider "virtualbox" do |v|
       # v.memory = 8192
-      v.memory = 4096
+      # v.memory = 4096
+      v.memory = 3072
       # v.memory = 2048
     end
 
