Role for generatortron

--- a/ansible/configure-playbook.yml
+++ b/ansible/configure-playbook.yml
@@ -8,5 +8,7 @@
   roles:
     - role: configure-vanilla
       tags: configure-vanilla
+    - role: demo-data
+      tags: demo-data
     - role: finalization
       tags: finalization
