Disable more legacy events generation

--- a/ansible/roles/emma/tasks/main.yml
+++ b/ansible/roles/emma/tasks/main.yml
@@ -65,6 +65,7 @@
         - disable-help-links.patch
         - disable-legacy-events-generator.patch
         - disable-vpn-and-pxe-config-updating.patch
+        - disable-legacy-events-generator-2.patch
 
     - name: Bundle install gems
       ansible.builtin.shell: |
