--- a/ansible/roles/demo-data/files/data.yaml
+++ b/ansible/roles/demo-data/files/data.yaml
@@ -244,3 +244,40 @@ racks:
         facing: "b"
         username: fake
         password: fake
+
+data_centre:
+  image_path: /ansible/roles/demo-data/files/data_center_background.png
+  x_dim: 4
+  y_dim: 4
+
+  rack_positions:
+    - x_pos: 0.73
+      y_pos: 0.69
+      x_dim: 0.6
+      y_dim: 1.2
+
+    - x_pos: 1.43
+      y_pos: 0.69
+      x_dim: 0.6
+      y_dim: 1.2
+
+  sensor_positions:
+    - x_pos: "2.25"
+      y_pos: "0.55"
+      x_dim: "0.07023411371237458"
+      y_dim: "0.07812470935748006"
+
+    - x_pos: "0.45"
+      y_pos: "2.05"
+      x_dim: "0.07023411371237458"
+      y_dim: "0.07812470935748006"
+
+    - x_pos: "0.45"
+      y_pos: "0.55"
+      x_dim: "0.07023411371237458"
+      y_dim: "0.07812470935748006"
+
+    - x_pos: "2.25"
+      y_pos: "2.05"
+      x_dim: "0.07023411371237458"
+      y_dim: "0.07812470935748006"
