Restart meryl and make sure fake gmond is running

--- a/ansible/roles/demo-data/tasks/main.yml
+++ b/ansible/roles/demo-data/tasks/main.yml
@@ -29,3 +29,12 @@
       failed_when: generatortron.rc != 0
       when: generatortron.rc != 0
 
+- name: Restart meryl
+  ansible.builtin.service:
+    name: meryl
+    state: restarted
+
+- name: Ensure fake gmond is running
+  ansible.builtin.service:
+    name: fake-ganglia
+    state: started
