--- a/ansible/roles/monit/tasks/main.yml
+++ b/ansible/roles/monit/tasks/main.yml
@@ -3,7 +3,7 @@
     name: monit
     state: latest
 
-- name: Copy configuration
+- name: Install configuration
   ansible.builtin.copy:
     src: "{{ item.src }}"
     dest: "{{ item.dest }}"
@@ -24,15 +24,26 @@
       group: root
       mode: "700"
 
-    - src: monit.init
-      dest: /etc/init.d/monit
-      owner: root
-      group: root
-      mode: "744"
 
-- name: Add monit to inittab
-  ansible.builtin.lineinfile:
-    line: "mo:2345:respawn:/usr/sbin/monit -I -c /etc/monit/monitrc -s /var/lib/monit/monit.state"
-    path: "/etc/inittab"
-    insertbefore: EOF
+- name: Install monitored services configuration
+  ansible.builtin.copy:
+    src: services/
+    dest: /etc/monit/conf.d/
 
+- name: Install monit utility scripts
+  ansible.builtin.copy:
+    src: scripts/
+    dest: /usr/local/sbin/
+    owner: root
+    group: root
+    mode: "755"
+
+- name: Create symlinks
+  ansible.builtin.file:
+    src: /usr/local/sbin/check_drb_connection.sh
+    dest: "/usr/local/sbin/{{ item }}"
+    state: link
+  loop:
+    - check_hacor_connection.sh
+    - check_sas_connection.sh
+    - check_meca_connection.sh
