Don't start or monitor UMA module
Uma module is only wanted for its database migrations.  All of the "uma
functionality" has been migrated to emma/uma.

The migrations should be moved from uma to emma/uma, but for now we
install, migrate but don't start uma.

--- a/ansible/roles/phoenix-modules/defaults/main.yml
+++ b/ansible/roles/phoenix-modules/defaults/main.yml
@@ -1,13 +1,21 @@
 mode: production
 phoenix_modules_root_dir: "/data/private/share/rails"
 integrator_password: integrator
-modules:
-  - hacor
-  # - nadia
-  - meca
-  - oobm
-  - sas
-  - scram
-  - uma
+phoenix_modules:
+  - name: hacor
+    start: true
+  - name: meca
+    start: true
+  - name: oobm
+    start: true
+  - name: sas
+    start: true
+  - name: scram
+    start: true
+
+  # Uma is only wanted for its database migrations.
+  # XXX The migrations should be moved from uma to emma/uma.
+  - name: uma
+    start: false
 bind_directory: /opt/concurrent-thinking
 dynamic_images: "/opt/concurrent-thinking/mia/public/images/dynamic/"
