--- a/ansible/roles/emma/tasks/main.yml
+++ b/ansible/roles/emma/tasks/main.yml
@@ -66,6 +66,7 @@
         - disable-legacy-events-generator.patch
         - disable-vpn-and-pxe-config-updating.patch
         - disable-legacy-events-generator-2.patch
+        - nadia-is-not-expected.patch
 
     - name: Bundle install gems
       ansible.builtin.shell: |
