Revert "Don't start or monitor UMA module"
It turns out that (at least) some of our pages make an XHR request to
uma `/sessions/get`.  This request may or may not be the last thing
requiring uma to run.

This reverts commit 5d76e4c64d974b5ed33eb749daf0a5f1d118a8f7.

--- a/ansible/roles/phoenix-modules/defaults/main.yml
+++ b/ansible/roles/phoenix-modules/defaults/main.yml
@@ -1,21 +1,13 @@
 mode: production
 phoenix_modules_root_dir: "/data/private/share/rails"
 integrator_password: integrator
-phoenix_modules:
-  - name: hacor
-    start: true
-  - name: meca
-    start: true
-  - name: oobm
-    start: true
-  - name: sas
-    start: true
-  - name: scram
-    start: true
-
-  # Uma is only wanted for its database migrations.
-  # XXX The migrations should be moved from uma to emma/uma.
-  - name: uma
-    start: false
+modules:
+  - hacor
+  # - nadia
+  - meca
+  - oobm
+  - sas
+  - scram
+  - uma
 bind_directory: /opt/concurrent-thinking
 dynamic_images: "/opt/concurrent-thinking/mia/public/images/dynamic/"
