--- a/ansible/roles/phoenix-modules/tasks/main.yml
+++ b/ansible/roles/phoenix-modules/tasks/main.yml
@@ -1,12 +1,12 @@
 - name: Download module packages from S3
   amazon.aws.aws_s3:
     bucket: alces-flight
-    object: /concertim/packages/modules/{{ item.name }}.tgz
+    object: /concertim/packages/modules/{{ item }}.tgz
     dest: "{{ role_path }}/files/tmp/{{ item }}.tgz"
     mode: get
     aws_access_key: "{{ aws_access_key_id }}"
     aws_secret_key: "{{ aws_secret_access_key }}"
-  loop: "{{ phoenix_modules }}"
+  loop: "{{ modules }}"
 
 - name: Make destination directory
   ansible.builtin.file:
@@ -18,18 +18,18 @@
 
 - name: Extract tar files
   ansible.builtin.unarchive:
-    src: "tmp/{{ item.name }}.tgz"
+    src: "tmp/{{ item }}.tgz"
     dest: "{{ phoenix_modules_root_dir }}"
-    creates: "{{ phoenix_modules_root_dir }}/{{ item.name }}"
-  loop: "{{ phoenix_modules }}"
+    creates: "{{ phoenix_modules_root_dir }}/{{ item }}"
+  loop: "{{ modules }}"
 
 - name: Correct ownership
   ansible.builtin.file:
-    path: "{{ phoenix_modules_root_dir }}/{{ item.name }}"
+    path: "{{ phoenix_modules_root_dir }}/{{ item }}"
     owner: www-data
     group: www-data
     recurse: true
-  loop: "{{ phoenix_modules }}"
+  loop: "{{ modules }}"
 
 - name: bind rails modules into {{ bind_directory }}
   when: bind_directory is defined
@@ -53,7 +53,7 @@
 
 - name: configure modules
   vars:
-    template_dest: "{{ phoenix_modules_root_dir }}/{{ module.name }}/config/local_environment.rb"
+    template_dest: "{{ phoenix_modules_root_dir }}/{{ module }}/config/local_environment.rb"
     template_src: "{{ template_dest }}.tagged"
     replacements:
       - regexp: "%PASSWORD_ENCRYPTION_SALT%"
@@ -61,7 +61,7 @@
       - regexp: "%DYNAMIC_IMAGES%"
         replace: "{{ dynamic_images }}"
   include_tasks: install_tagged_configuration.yml
-  loop: "{{ phoenix_modules }}"
+  loop: "{{ modules }}"
   loop_control:
     loop_var: module
 
@@ -90,10 +90,10 @@
     - name: Monkey patch active record
       ansible.builtin.copy:
         src: monkey_patch_active_record.rb
-        dest: "{{ phoenix_modules_root_dir }}/{{ item.name }}/config/initializers/"
+        dest: "{{ phoenix_modules_root_dir }}/{{ item }}/config/initializers/"
         owner: www-data
         group: www-data
-      loop: "{{ phoenix_modules }}"
+      loop: "{{ modules }}"
 
 - name: Fix and hack hacor into submission
   include_tasks: hacor_fixes_and_hacks.yml
@@ -108,8 +108,8 @@
     cmd: |
       PATH=/opt/ruby-1.8/bin:$PATH
       sudo -u www-data --preserve-env=PATH /bin/bash -c 'rake db:drop_and_create RAILS_ENV={{ rails_env }} PHOENIX_START=0 --trace'
-    chdir: "{{ phoenix_modules_root_dir }}/{{ item.name }}"
-  loop: "{{ phoenix_modules }}"
+    chdir: "{{ phoenix_modules_root_dir }}/{{ item }}"
+  loop: "{{ modules }}"
 
 - name: Migrate database
   vars:
@@ -118,16 +118,16 @@
     cmd: |
       PATH=/opt/ruby-1.8/bin:$PATH
       sudo -u www-data --preserve-env=PATH /bin/bash -c 'rake db:rebuild RAILS_ENV={{ rails_env }} PHOENIX_START=0 --trace'
-    chdir: "{{ phoenix_modules_root_dir }}/{{ item.name }}"
-  loop: "{{ phoenix_modules }}"
+    chdir: "{{ phoenix_modules_root_dir }}/{{ item }}"
+  loop: "{{ modules }}"
 
 
 - name: Install mongrel config files
   vars:
     mongrel_user: "www-data"
     mongrel_conf_dir: "/etc/mongrel_cluster"
-    template_dest: "{{ mongrel_conf_dir }}/{{ module.name }}.yml"
-    template_src: "{{ phoenix_modules_root_dir }}/{{ module.name }}/config/mongrel_cluster.yml.tagged"
+    template_dest: "{{ mongrel_conf_dir }}/{{ module }}.yml"
+    template_src: "{{ phoenix_modules_root_dir }}/{{ module }}/config/mongrel_cluster.yml.tagged"
     replacements:
       - regexp: "%MONGREL_USER%"
         replace: "{{ mongrel_user }}"
@@ -135,13 +135,12 @@
         replace: "{{ mongrel_user }}"
       - regexp: "%ENV%"
         replace: "{{ mode }}"
-      - regexp: "%{{ module.name | upper }}_ROOT%"
-        replace: "/opt/concurrent-thinking/{{ module.name }}"
+      - regexp: "%{{ module | upper }}_ROOT%"
+        replace: "/opt/concurrent-thinking/{{ module }}"
   include_tasks: install_tagged_configuration.yml
-  loop: "{{ phoenix_modules }}"
+  loop: "{{ modules }}"
   loop_control:
     loop_var: module
-  when: module.start == True
 
 - name: Install various appliance scripts
   include_tasks: install_scripts.yml
