--- a/ansible/roles/personality/files/personality.yml
+++ b/ansible/roles/personality/files/personality.yml
@@ -1,17 +1,17 @@
 ---
 :personality: 'ct'
-:personality_name: 'WES LLC'
-:personality_url: 'http://www.wes.net/'
+:personality_name: 'Alces Concertim'
+:personality_url: 'https://alces-flight.com/'
 :name: 'Command %VERSION%'
 :about: 'Command Release: %RELEASE%'
 :short: 'Command'
 :title: 'Command Management Appliance'
-:subtitle: 'From WES LLC'
-:manufacturer: 'Concertim Infrastructure Management'
-:error_mail: 'concertim.support@wes.net'
-:support_team: 'WES LLC'
-:support_mail: 'concertim.support@wes.net'
-:support_web: 'http://www.wes.net/'
-:support_tel: '+1 215 619 0980'
+:subtitle: 'From Alces Concertim'
+:manufacturer: 'Alces Flight'
+:error_mail: 'concertim.support@alces-flight.com'
+:support_team: 'Alces Concertim'
+:support_mail: 'concertim.support@alces-flight.com'
+:support_web: 'https://alces-flight.com/'
+:support_tel: ''
 :mia_chassis_template_name: 'Command'
 :isla_chassis_template_name: 'Control'
