--- a/ansible/roles/phoenix-modules/tasks/sas_fixes_and_hacks.yml
+++ b/ansible/roles/phoenix-modules/tasks/sas_fixes_and_hacks.yml
@@ -11,3 +11,4 @@
     # publishing its models.
     - initial-ftsw.patch
     - ftsw-disable-vpn-and-pxe-config-updating.patch
+    - rebranding.patch
