Fix Alces Concertim Appliances group membership
The group is keyed off of the device's template's manufacturer name.
The group and the personality/MIA template/ISLA template were not
updated consistently.

--- a/ansible/roles/personality/files/personality.yml
+++ b/ansible/roles/personality/files/personality.yml
@@ -7,7 +7,7 @@
 :short: 'Command'
 :title: 'Command Management Appliance'
 :subtitle: 'From Alces Concertim'
-:manufacturer: 'Alces Flight'
+:manufacturer: 'Alces Concertim'
 :error_mail: 'concertim.support@alces-flight.com'
 :support_team: 'Alces Concertim'
 :support_mail: 'concertim.support@alces-flight.com'
