--- a/ansible/roles/package-daemons/defaults/main.yml
+++ b/ansible/roles/package-daemons/defaults/main.yml
@@ -10,13 +10,15 @@ packaged_daemons:
   # executing jobs (scram) perhaps?
   # - sadee
 
-  # We want meryl, but it has a dependency on a deb file that is likely not to
-  # install.
+  # Parses `gmetad` output and updates memcache.  Memcache data includes
+  # * for each device, its current metrics and values.
+  # * for each metric, list of devices currently reporting that metric.
+  # * a unique list of metrics.
+  # * for each "appliance" reported by ailsa, details of that appliance.
   - meryl
 
-  # Appliance Informatics and Local Setup Agent.  Might be important.  Or only
-  # important when ISLAs are present?
-  # - ailsa
+  # Appliance Informatics and Local Setup Agent.
+  - ailsa
 
   # Does SNMP, MODBUS metric polling.  We want this. But a gem doesn't
   # install due to native extension build issues.
@@ -27,13 +29,16 @@ packaged_daemons:
   # - senna
 
   # Metric aggregation engine.  User defined metrics(?) and inferred metrics.
-  - maggie
+  # Needs a number cruncher.
+  # - maggie
 
   # Another metric aggregation engine.
-  - martha
+  # Needs a number cruncher.
+  # - martha
 
   # Theresa Humbly Evaluates and REports State Alterations.
-  - theresa
+  # Needs a number cruncher.
+  # - theresa
 
   # Polls power strips for metrics.
   # - postie
@@ -54,7 +59,8 @@ packaged_daemons:
   # - florence
 
   # Calculates rack (and PDU?) capacity.
-  - ct-capacity-daemon
+  # Needs a number cruncher.
+  #- ct-capacity-daemon
 
   # Another thing to do with metrics?  No idea if this is needed or not.  It
   # might be nothing more than a rebranded `demm`?  Or it might be a demm
