--- a/ansible/roles/package-daemons/tasks/main.yml
+++ b/ansible/roles/package-daemons/tasks/main.yml
@@ -43,6 +43,20 @@
 
 # - name: Updating bunder to use {{ gem_source_url }}
 
+# XXX Port these to git repo.
+- name: Patch daemons source code
+  ansible.builtin.patch:
+    src: "patches/{{ item.patch }}"
+    basedir: "{{ daemon_installation_dir }}/{{ item.daemon }}"
+    backup: yes
+    strip: 1
+  loop:
+    - daemon: meryl
+      patch: meryl-fix-monit-path.patch
+
+- name: Additional ailsa configuration
+  include_tasks: ailsa_config.yml
+
 - name: Install gem dependencies
   vars:
     daemon_path: "{{ daemon_installation_dir}}/{{ item }}"
@@ -84,37 +98,37 @@
 #         group: root
 #         mode: "644"
 
-- name: Additional martha configuration
-  block:
-    - name: Make rrds directory
-      ansible.builtin.file:
-        path: "{{ daemon_installation_dir }}/martha/rrds"
-        state: directory
-        owner: root
-        group: root
-        mode: "755"
+# - name: Additional martha configuration
+#   block:
+#     - name: Make rrds directory
+#       ansible.builtin.file:
+#         path: "{{ daemon_installation_dir }}/martha/rrds"
+#         state: directory
+#         owner: root
+#         group: root
+#         mode: "755"
 
-    - name: Install martha number cruncher
-      ansible.builtin.command:
-        cmd: dpkg -i --force-architecture --force-overwrite {{ role_path }}/files/martha-number-cruncher.deb
+#     - name: Install martha number cruncher
+#       ansible.builtin.command:
+#         cmd: dpkg -i --force-architecture --force-overwrite {{ role_path }}/files/martha-number-cruncher.deb
 
-- name: Additional theresa configuration
-  block:
-    - name: Install theresa number cruncher
-      ansible.builtin.command:
-        cmd: dpkg -i --force-architecture --force-overwrite {{ role_path }}/files/theresa-number-cruncher.deb
+# - name: Additional theresa configuration
+#   block:
+#     - name: Install theresa number cruncher
+#       ansible.builtin.command:
+#         cmd: dpkg -i --force-architecture --force-overwrite {{ role_path }}/files/theresa-number-cruncher.deb
 
-- name: Additional maggie configuration
-  block:
-    - name: Install maggie number cruncher
-      ansible.builtin.command:
-        cmd: dpkg -i --force-architecture --force-overwrite {{ role_path }}/files/maggie-number-cruncher.deb
+# - name: Additional maggie configuration
+#   block:
+#     - name: Install maggie number cruncher
+#       ansible.builtin.command:
+#         cmd: dpkg -i --force-architecture --force-overwrite {{ role_path }}/files/maggie-number-cruncher.deb
 
-- name: Additional ct-capacity-daemon configuration
-  block:
-    - name: Install ct-capacity-daemon number cruncher
-      ansible.builtin.command:
-        cmd: dpkg -i --force-architecture --force-overwrite {{ role_path }}/files/ct-capacity-daemon-number-cruncher.deb
+# - name: Additional ct-capacity-daemon configuration
+#   block:
+#     - name: Install ct-capacity-daemon number cruncher
+#       ansible.builtin.command:
+#         cmd: dpkg -i --force-architecture --force-overwrite {{ role_path }}/files/ct-capacity-daemon-number-cruncher.deb
 
 - name: Install clobber script
   ansible.builtin.copy:
@@ -125,18 +139,6 @@
     mode: "755"
 
 # - name: Install hw.sh script
-
-
-# XXX Port these to git repo.
-- name: Patch daemons source code
-  ansible.builtin.patch:
-    src: "patches/{{ item.patch }}"
-    basedir: "{{ daemon_installation_dir }}/{{ item.daemon }}"
-    backup: yes
-    strip: 1
-  loop:
-    - daemon: meryl
-      patch: meryl-fix-monit-path.patch
 
 
 - name: Ensure that daemons are enabled
