Don't restart services that don't exist

--- a/ansible/roles/finalization/tasks/main.yml
+++ b/ansible/roles/finalization/tasks/main.yml
@@ -5,11 +5,12 @@
   loop:
     - mongrel_cluster
     - emma
-    - maggie
-    - martha
-    - theresa
+    - ailsa
+    # - maggie
+    # - martha
+    # - theresa
     - enid
-    - ct-capacity-daemon
+    # - ct-capacity-daemon
     - delayed_job
 
 - name: Restart delia service
