Add martha daemon
Martha reads device metrics from ganglia, calculates group aggregations
populates memcache with the result and provides a gmond-like service to
publish the aggregations.

Which groups martha aggregates is controlled by the
`hacor:appliance_configs` memcache entry and the EUI of the `eth1` NIC.

The `hacor:appliance_configs` entry is calculated by configuring the
known appliances in the MIA ui.  That is configuring which group each
MIA/ISLA appliance monitors.

A monit file has also been added.

--- a/ansible/roles/package-daemons/defaults/main.yml
+++ b/ansible/roles/package-daemons/defaults/main.yml
@@ -32,9 +32,8 @@ packaged_daemons:
   # Needs a number cruncher.
   # - maggie
 
-  # Another metric aggregation engine.
-  # Needs a number cruncher.
-  # - martha
+  # Group metric aggregation engine.
+  - martha
 
   # Theresa Humbly Evaluates and REports State Alterations.
   # Needs a number cruncher.
@@ -73,3 +72,4 @@ init_only_daemons:
 
 number_crunchers:
   - meryl
+  - martha
