--- a/ansible/roles/package-daemons/tasks/main.yml
+++ b/ansible/roles/package-daemons/tasks/main.yml
@@ -57,6 +57,9 @@
 - name: Additional ailsa configuration
   include_tasks: ailsa_config.yml
 
+- name: Additional martha configuration
+  include_tasks: martha_config.yml
+
 - name: Install gem dependencies
   vars:
     daemon_path: "{{ daemon_installation_dir}}/{{ item }}"
@@ -97,20 +100,6 @@
 #         owner: www-data
 #         group: root
 #         mode: "644"
-
-# - name: Additional martha configuration
-#   block:
-#     - name: Make rrds directory
-#       ansible.builtin.file:
-#         path: "{{ daemon_installation_dir }}/martha/rrds"
-#         state: directory
-#         owner: root
-#         group: root
-#         mode: "755"
-
-#     - name: Install martha number cruncher
-#       ansible.builtin.command:
-#         cmd: dpkg -i --force-architecture --force-overwrite {{ role_path }}/files/martha-number-cruncher.deb
 
 # - name: Additional theresa configuration
 #   block:
